docs/css/bulma-docs.css
/* ... */
.control.has-addons .button:hover,
.control.has-addons .input:hover,
.control.has-addons .select:hover {
  z-index: 2;
}

.control.has-addons .button:focus, .control.has-addons .button:active,
.control.has-addons .input:focus,
.control.has-addons .input:active,
.control.has-addons .select:focus,
.control.has-addons .select:active {
  z-index: 3;
}

.control.has-addons .button:first-child,
.control.has-addons .input:first-child,
.control.has-addons .select:first-child {
  border-radius: 3px 0 0 3px;
}

.control.has-addons .button:first-child select,
.control.has-addons .input:first-child select,
.control.has-addons .select:first-child select {
  border-radius: 3px 0 0 3px;
}

.control.has-addons .button:last-child,
.control.has-addons .input:last-child,
.control.has-addons .select:last-child {
  border-radius: 0 3px 3px 0;
}

.control.has-addons .button:last-child select,
.control.has-addons .input:last-child select,
.control.has-addons .select:last-child select {
  border-radius: 0 3px 3px 0;
}

.control.has-addons .button.is-expanded,
.control.has-addons .input.is-expanded,
.control.has-addons .select.is-expanded {
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  -ms-flex-negative: 0;
      flex-shrink: 0;
}

.control.has-addons .select select:hover {
  z-index: 2;
}

.control.has-addons .select select:focus, .control.has-addons .select select:active {
  z-index: 3;
}

.control.has-addons.has-addons-centered {
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.control.has-addons.has-addons-right {
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
}

.control.has-addons.has-addons-fullwidth .button,
.control.has-addons.has-addons-fullwidth .input,
.control.has-addons.has-addons-fullwidth .select {
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  -ms-flex-negative: 0;
      flex-shrink: 0;
}

.control.has-icon .icon {
  color: #dbdbdb;
  pointer-events: none;
  position: absolute;
  top: 1.25rem;
  z-index: 4;
}

.control.has-icon .input:focus + .icon {
  color: #7a7a7a;
}

.control.has-icon .input.is-small + .icon {
  top: 0.9375rem;
}

.control.has-icon .input.is-medium + .icon {
  top: 1.5625rem;
}

.control.has-icon .input.is-large + .icon {
  top: 1.875rem;
}

.control.has-icon:not(.has-icon-right) .icon {
  left: 1.25rem;
  -webkit-transform: translateX(-50%) translateY(-50%);
          transform: translateX(-50%) translateY(-50%);
}

.control.has-icon:not(.has-icon-right) .input {
  padding-left: 2.5em;
}

.control.has-icon:not(.has-icon-right) .input.is-small + .icon {
  left: 0.9375rem;
}

.control.has-icon:not(.has-icon-right) .input.is-medium + .icon {
  left: 1.5625rem;
}

.control.has-icon:not(.has-icon-right) .input.is-large + .icon {
  left: 1.875rem;
}

.control.has-icon.has-icon-right .icon {
  right: 1.25rem;
  -webkit-transform: translateX(50%) translateY(-50%);
          transform: translateX(50%) translateY(-50%);
}

.control.has-icon.has-icon-right .input {
  padding-right: 2.5em;
}

.control.has-icon.has-icon-right .input.is-small + .icon {
  right: 0.9375rem;
}

.control.has-icon.has-icon-right .input.is-medium + .icon {
  right: 1.5625rem;
}

.control.has-icon.has-icon-right .input.is-large + .icon {
  right: 1.875rem;
}

.control.is-grouped {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          justify-content: flex-start;
}

.control.is-grouped > .control {
  -ms-flex-preferred-size: 0;
      flex-basis: 0;
  -ms-flex-negative: 0;
      flex-shrink: 0;
}

.control.is-grouped > .control:not(:last-child) {
  margin-bottom: 0;
  margin-right: 0.75rem;
}

.control.is-grouped > .control.is-expanded {
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  -ms-flex-negative: 1;
      flex-shrink: 1;
}

.control.is-grouped.is-grouped-centered {
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.control.is-grouped.is-grouped-right {
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
}

@media screen and (min-width: 769px) {
  .control.is-horizontal {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
  .control.is-horizontal > .control {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-preferred-size: 0;
        flex-basis: 0;
    -webkit-box-flex: 5;
        -ms-flex-positive: 5;
            flex-grow: 5;
    -ms-flex-negative: 1;
        flex-shrink: 1;
  }
}

.control.is-loading:after {
  -webkit-animation: spinAround 500ms infinite linear;
          animation: spinAround 500ms infinite linear;
  border: 2px solid #dbdbdb;
  border-radius: 290486px;
  border-right-color: transparent;
  border-top-color: transparent;
  content: "";
  display: block;
  height: 1rem;
  position: relative;
  width: 1rem;
  position: absolute !important;
  right: 0.75em;
  top: 0.75em;
}

.icon {
  display: inline-block;
  font-size: 21px;
  height: 1.5rem;
  line-height: 1.5rem;
  text-align: center;
  vertical-align: top;
  width: 1.5rem;
}

.icon .fa {
  font-size: inherit;
  line-height: inherit;
}

.icon.is-small {
  display: inline-block;
  font-size: 14px;
  height: 1rem;
  line-height: 1rem;
  text-align: center;
  vertical-align: top;
  width: 1rem;
}

.icon.is-medium {
  display: inline-block;
  font-size: 28px;
  height: 2rem;
  line-height: 2rem;
  text-align: center;
  vertical-align: top;
  width: 2rem;
}

.icon.is-large {
  display: inline-block;
  font-size: 42px;
  height: 3rem;
  line-height: 3rem;
  text-align: center;
  vertical-align: top;
  width: 3rem;
}

.image {
  display: block;
  position: relative;
}

.image img {
  display: block;
  height: auto;
  width: 100%;
}
/* ... */

